refs done more polish on some sections

--- a/Domination/honours-project-report/mybibfile.bib
+++ b/Domination/honours-project-report/mybibfile.bib
@@ -211,4 +211,24 @@ in today's games.}},
     pages = {337--343},
     publisher = {Press}
 }
+
+@article{Carberry:2001:TPR:598284.598348,
+ author = {{Carberry, Sandra}},
+ title = {{Techniques for Plan Recognition}},
+ journal = {{User Modeling and User-Adapted Interaction}},
+ issue_date = {2001},
+ volume = {11},
+ number = {1-2},
+ month = mar,
+ year = {2001},
+ issn = {0924-1868},
+ pages = {31--48},
+ numpages = {18},
+ url = {http://dx.doi.org/10.1023/A:1011118925938},
+ doi = {10.1023/A:1011118925938},
+ acmid = {598348},
+ publisher = {Kluwer Academic Publishers},
+ address = {Hingham, MA, USA},
+ keywords = {goals, intentions, plan inference, plans},
+} 
  
